# revue

./: .dockerignore  .env  .gitignore  .gitmodules  .mergify.yml  404.html  CHANGELOG.md  LICENSE  README.md  build.gradle.kts  compose-all.sh  compose-db.sh  compose.sh  deploy.sh  distribution-tests.sh  doc-review  docker-compose.yml  fault-tolerance-tests.sh  index.html  package-lock.json  package.json  release.config.js  release.config.mjs  renovate.json  settings.gradle.kts  sitemap.xml  tsconfig.json  tsconfig.shared.json  undeploy.sh  update-version.sh
.postman/: api  (+1 more)
recognition/: Dockerfile  MANIFEST.in  build.gradle.kts  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.py
recognition/app/: MyClass.py  Recognizer.py  __init__.py  main.py
recognition/app/application/: RecognitionEventsHub.py  RecognitionService.py  Recognizer.py  __init__.py
recognition/app/application/impl/: RecognitionServiceImpl.py  __init__.py
recognition/app/domain/core/: ObjectClass.py  __init__.py
recognition/app/domain/factories/: DetectionFactory.py  SecurityRuleFactory.py  SecurityRulesFactory.py  __init__.py
recognition/app/infrastructure/: main.py
recognition/app/presentation/: __init__.py  presentation.py
recognition/app/recognizer/: Producer.py  Recognizer.py  RecognizersManager.py
recognition/app/utils/: KafkaManager.py  Logger.py  env.py  interval.py
recognition/my_project/: __init__.py  __main__.py
recognition/test/: __init__.py  test_IntrusionRule.py
recognition/test/application/: test_TestRecognitionService.py  test_TestRecognizersManager.py
recognition/test/recognizer/: test_TestRecognizersManager.py
src/: index.ts
(+1488 files in other folders)
